Split the library into libgdl (gtk only) and libgdl-gnome (with gnome
2006-09-18  Johannes Schmid <jhs@gnome.org>

	* configure.in:
	* gdl-gnome-1.0.pc.in (added):
	* gdl/Makefile.am:

	Split the library into libgdl (gtk only) and libgdl-gnome (with gnome support)
	Bumped version to 0.7.0 (because of obvious API changes)

--- a/configure.in
+++ b/configure.in
@@ -10,8 +10,8 @@ AC_INIT(gdl)
 AM_CONFIG_HEADER(config.h)
 
 GDL_MAJOR_VERSION=0
-GDL_MINOR_VERSION=6
-GDL_MICRO_VERSION=1
+GDL_MINOR_VERSION=7
+GDL_MICRO_VERSION=0
 PACKAGE=gdl
 GDL_VERSION=$GDL_MAJOR_VERSION.$GDL_MINOR_VERSION.$GDL_MICRO_VERSION
 
@@ -35,14 +35,12 @@ AC_SUBST(SNAPSHOT)
 
 GTK_REQUIRED=2.4.0
 GNOME_REQUIRED=2.6.0
-BONOBOUI_REQUIRED=2.2.0
 XML_REQUIRED=2.2.8
 LIBGLADE_REQUIRED=2.0.0
 GNOME_VFS_REQUIRED=2.6.0
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GNOME_REQUIRED)
-AC_SUBST(BONOBOUI_REQUIRED)
 AC_SUBST(XML_REQUIRED)
 AC_SUBST(LIBGLADE_REQUIRED)
 
@@ -64,7 +62,7 @@ AC_PROG_LIBTOOL
 
 
 dnl ***************
-dnl GNOME Libraries 
+dnl GTK Libraries 
 dnl ***************
 
 PKG_CHECK_MODULES(XML, libxml-2.0 >= $XML_REQUIRED)
@@ -166,4 +164,5 @@ gdl/Makefile
 po/Makefile.in 
 gdl.spec
 gdl-1.0.pc
+gdl-gnome-1.0.pc
 ])
