--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -39,11 +39,6 @@ libgdl_headers = \
 	gdl-stock.h \
 	gdl-stock-icons.h
 
-if HAVE_GNOME
-libgdl_headers += \
-	gdl-icons.h
-endif
-
 libgdl_1_la_SOURCES = \
 	$(libgdl_headers) \
 	gdl-i18n.h \
@@ -67,17 +62,30 @@ libgdl_1_la_SOURCES = \
 	libgdlmarshal.h \
 	libgdlmarshal.c
 
-if HAVE_GNOME
-libgdl_1_la_SOURCES += \
-	gdl-icons.c
-endif
-
 libgdl_1_la_LIBADD = \
 	$(GDL_DEPENDENCIES_LIBS) \
 	$(XML_LIBS) \
 	$(GNOME_LIBS)
 
 libgdl_1_la_LDFLAGS = $(EXTRA_LDFLAGS)
+
+libgdl_gnome_headers = \
+	gdl-icons.h
+
+if HAVE_GNOME
+lib_LTLIBRARIES += libgdl-gnome-1.la
+endif
+
+libgdl_gnome_1_la_SOURCES = \
+	$(libgdl_gnome_headers) \
+	gdl-icons.c
+
+libgdl_gnome_1_la_LIBADD = \
+	$(GDL_DEPENDENCIES_LIBS) \
+	$(XML_LIBS) \
+	$(GNOME_LIBS)
+	
+libgdl_gnome_1_la_LDFLAGS = $(EXTRA_LDFLAGS)
 
 noinst_PROGRAMS=test-dock test-combo-button
 
@@ -88,24 +96,23 @@ test_combo_button_SOURCES = test-combo-button.c
 test_combo_button_LDADD = libgdl-1.la
 
 if HAVE_GNOME
+	
+noinst_PROGRAMS += test-dataview
 
-	noinst_PROGRAMS += test-dataview
+test_dataview_SOURCES = \
+	gdl-data-view.h \
+	gdl-data-view.c \
+	gdl-data-frame.h \
+	gdl-data-frame.c \
+	gdl-data-model.h \
+	gdl-data-model.c \
+	gdl-data-model-test.h \
+	gdl-data-model-test.c \
+	gdl-data-row.h \
+	gdl-data-row.c \
+	test-dataview.c
 
-
-	test_dataview_SOURCES = \
-		gdl-data-view.h \
-		gdl-data-view.c \
-		gdl-data-frame.h \
-		gdl-data-frame.c \
-		gdl-data-model.h \
-		gdl-data-model.c \
-		gdl-data-model-test.h \
-		gdl-data-model-test.c \
-		gdl-data-row.h \
-		gdl-data-row.c \
-		test-dataview.c
-
-	test_dataview_LDADD = libgdl-1.la
+test_dataview_LDADD = libgdl-1.la libgdl-gnome-1.la
 
 endif
 
@@ -113,6 +120,10 @@ libgdlincludedir = $(includedir)/libgdl-1.0/gdl
 libgdlinclude_HEADERS = \
 	$(libgdl_headers) \
 	libgdltypebuiltins.h
+
+libgdl_gnomeincludedir = $(includedir)/libgdl-1.0/gdl
+libgdl_gnomeinclude_HEADERS = \
+	$(libgdl_gnome_headers)
 
 gladedir = $(datadir)/gdl/glade
 glade_DATA = layout.glade
