Install gdl-gnome.pc only if build with gnome support (#403044)
2007-02-01  Johannes Schmid <jhs@gnome.org>

        * Makefile.am:
        Install gdl-gnome.pc only if build with gnome support (#403044)



svn path=/trunk/; revision=342

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,11 @@ EXTRA_DIST = 			\
 	intltool-update.in
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = gdl-1.0.pc gdl-gnome-1.0.pc
+pkgconfig_DATA = gdl-1.0.pc 
+
+if HAVE_GNOME
+pkgconfig_DATA += gdl-gnome-1.0.pc
+endif
 
 CLEANFILES = gdl-1.0.pc intltool-extract intltool-merge intltool-update
 
