Added HAVE_GNOME config define.
	* configure.in: Added HAVE_GNOME config define.
	
	* gdl/gdl-dock-item.c: (gdl_dock_item_size_allocate): Do not
	allocate negative size to child.
	
	* (added) gdl/gdl-switcher.[ch], gdl/gdl.h, gdl/Makefile.am:
	Added a notebook like
	widget (derived from GtkNotebook) which has self organizing buttons
	instead of tabs. It can also become gtknotebook if show-tabs is
	enabled on it. Also the buttons can be configure to take icon-only,
	text-only, both or GNOME desktop setting for toolbars (default).

	* gdl/gdl-dock-notebook.c: (gdl_dock_notebook_instance_init),
	(gdl_dock_notebook_dock): Use the new GdlSwitcher widget instead of
	GtkNotebook.


svn path=/trunk/; revision=352

--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -36,6 +36,7 @@ libgdl_headers = \
 	gdl-dock-placeholder.h \
 	gdl-dock-bar.h \
 	gdl-combo-button.h \
+	gdl-switcher.h \
 	gdl-stock.h \
 	gdl-stock-icons.h
 
@@ -56,6 +57,7 @@ libgdl_1_la_SOURCES = \
 	gdl-dock-placeholder.c \
 	gdl-dock-bar.c \
 	gdl-combo-button.c \
+	gdl-switcher.c \
 	gdl-stock.c \
 	libgdltypebuiltins.h \
 	libgdltypebuiltins.c \
