Fixes build failure. Updated
        * configure.in: Fixes build failure.
        * NEWS: Updated


svn path=/trunk/; revision=361

--- a/configure.in
+++ b/configure.in
@@ -36,6 +36,7 @@ GNOME_REQUIRED=2.6.0
 XML_REQUIRED=2.2.8
 LIBGLADE_REQUIRED=2.0.0
 GNOME_VFS_REQUIRED=2.6.0
+GCONF_REQUIRED=2.0.0
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GNOME_REQUIRED)
@@ -95,7 +96,8 @@ else
 	
 	PKG_CHECK_MODULES(GNOME,
 		[libgnomeui-2.0 >= $GNOME_REQUIRED, 
-		gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED],
+		gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED,
+		gconf-2.0 >= $GCONF_REQUIRED],
 		[gnome="yes"],
 		[gnome="no"])
 	AC_SUBST(GNOME_CFLAGS)
