Removed GTK_DISABLE_DEPRECATED from CFLAGS because it will break with Gtk+
2007-07-21  Johannes Schmid <jhs@gnome.org>

        * configure.in:
        Removed GTK_DISABLE_DEPRECATED from CFLAGS because it will break
        with Gtk+ >= 2.10. There is a patch to move to the new tooltips
        API attached to bug #457562


svn path=/trunk/; revision=374

--- a/configure.in
+++ b/configure.in
@@ -109,7 +109,7 @@ AM_CONDITIONAL(HAVE_GNOME, [test x$gnome = xyes])
 
 
 if test x$MAINT = x; then
-	DEPRECATED_FLAGS="-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
+	DEPRECATED_FLAGS="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
 	AC_SUBST(DEPRECATED_FLAGS)
 fi
 
