Do not ref/unref icon theme as GTK+ docs stricly say you should not do
2007-09-24  Johannes Schmid <jhs@gnome.org>

	* gdl/gdl-icons.c:
	Do not ref/unref icon theme as GTK+ docs stricly say you should not do that!
	
	* configure.in:
	Disable deprecated flags completely until #457562 is fixed

	* MAINTAINERS: stick to GNOME convention to allow co

svn path=/trunk/; revision=389

--- a/configure.in
+++ b/configure.in
@@ -107,11 +107,11 @@ fi
 
 AM_CONDITIONAL(HAVE_GNOME, [test x$gnome = xyes])
 
-
-if test x$MAINT = x; then
-	DEPRECATED_FLAGS="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
-	AC_SUBST(DEPRECATED_FLAGS)
-fi
+# Do not set deprecated flags as long as #457562 is not fixed
+#if test x$MAINT = x; then
+#	DEPRECATED_FLAGS="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
+#	AC_SUBST(DEPRECATED_FLAGS)
+#fi
 
 AC_MSG_CHECKING([for native Win32])
 case "$host" in
