Added gtk-doc documentation (currently 12% coverage...)
2008-02-10  Johannes Schmid <jhs@gnome.org>

	* Makefile.am:
	* configure.in:
	* docs/reference/Makefile.am:
	* docs/reference/gdl-docs.sgml:
	* docs/reference/gdl-sections.txt:
	* docs/reference/gdl.types:
	Added gtk-doc documentation (currently 12% coverage...)
	
	* gdl/gdl-tools.h:
	Silece a gtk-doc warning

svn path=/trunk/; revision=424

--- a/configure.in
+++ b/configure.in
@@ -160,10 +160,15 @@ fi
 gdl_images_dir="${packageprefix}/share/gdl/images"
 AC_SUBST(gdl_images_dir)
 
+# check for gtk-doc
+GTK_DOC_CHECK(1.9)
+
 AC_OUTPUT([
 Makefile
 gdl/Makefile
 po/Makefile.in 
+docs/Makefile
+docs/reference/Makefile
 gdl.spec
 gdl-1.0.pc
 gdl-gnome-1.0.pc
