reviewed by: <delete if not using a buddy>
2008-05-06  Johannes Schmid  <jhs@gnome.org>

	reviewed by: <delete if not using a buddy>

	* configure.in: Bump version to 2.23.0 (following GNOME cycle),
	bumped Gtk+ requirement to 2.12.0 and readded DISABLE_DEPRECATED
	
	Patch from Jan Arne Petersen
	* gdl/gdl-dock-bar.c (gdl_dock_bar_instance_init),
	(gdl_dock_bar_destroy), (gdl_dock_bar_add_item):
	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_destroy),
	(gdl_dock_item_grip_instance_init):
	* gdl/gdl-switcher.c (button_new), (button_free),
	(gdl_switcher_class_init), (gdl_switcher_add_button),
	(set_switcher_style_internal):
	
	Port to the GtkTooltip API (fixes #457562)
	
	* gdl/gdl-switcher.c:
	Use smaller buttons to waste less space
	
	* gdl/gdl-dock-item.c
	gtk_notebook_set_page() -> gtk_notebook_set_current_page() to fix build

svn path=/trunk/; revision=471

--- a/configure.in
+++ b/configure.in
@@ -9,9 +9,9 @@ AC_PREREQ(2.53)
 AC_INIT(gdl)
 AM_CONFIG_HEADER(config.h)
 
-GDL_MAJOR_VERSION=0
-GDL_MINOR_VERSION=7
-GDL_MICRO_VERSION=11
+GDL_MAJOR_VERSION=2
+GDL_MINOR_VERSION=23
+GDL_MICRO_VERSION=0
 PACKAGE=gdl
 GDL_VERSION=$GDL_MAJOR_VERSION.$GDL_MINOR_VERSION.$GDL_MICRO_VERSION
 
@@ -31,7 +31,7 @@ AC_SUBST(GDL_VERSION)
 SNAPSHOT=0_`date +%Y%m%d_%H%M%S`_cvs
 AC_SUBST(SNAPSHOT)
 
-GTK_REQUIRED=2.4.0
+GTK_REQUIRED=2.12.0
 GNOME_REQUIRED=2.6.0
 XML_REQUIRED=2.2.8
 LIBGLADE_REQUIRED=2.0.0
@@ -107,11 +107,10 @@ fi
 
 AM_CONDITIONAL(HAVE_GNOME, [test x$gnome = xyes])
 
-# Do not set deprecated flags as long as #457562 is not fixed
-#if test x$MAINT = x; then
-#	DEPRECATED_FLAGS="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
-#	AC_SUBST(DEPRECATED_FLAGS)
-#fi
+if test x$MAINT = x; then
+	DEPRECATED_FLAGS="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
+	AC_SUBST(DEPRECATED_FLAGS)
+fi
 
 AC_MSG_CHECKING([for native Win32])
 case "$host" in
