--- a/gdl-1.0.pc.in
+++ b/gdl-1.0.pc.in
@@ -2,6 +2,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@/libgdl-1.0
+datarootdir=@datarootdir@
 idldir=@datadir@/idl/libgdl-1.0
 
 Name: gdl
