configure.in Bumped version updated
2008-09-22  Johannes Schmid  <jhs@gnome.org>

        * configure.in Bumped version
        * NEWS: updated


svn path=/trunk/; revision=508

--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -77,7 +77,7 @@ GTKDOC_LIBS=$(GDL_DEPENDENCIES_LIBS) \
 	$(XML_LIBS) \
 	$(GNOME_LIBS) \
 	-L$(top_builddir)/gdl \
-	-lgdl-1 -lgdl-gnome-1
+	-lgdl-1
 
 # This includes the standard gtk-doc make rules, copied by gtkdocize.
 include $(top_srcdir)/gtk-doc.make
