--- a/configure.in
+++ b/configure.in
@@ -12,6 +12,23 @@ AM_CONFIG_HEADER(config.h)
 GDL_MAJOR_VERSION=2
 GDL_MINOR_VERSION=27
 GDL_MICRO_VERSION=1
+
+dnl increment if the interface has additions, changes, removals.
+GDL_CURRENT=1
+
+dnl increment any time the source changes; set to
+dnl  0 if you increment CURRENT
+GDL_REVISION=0
+
+dnl increment if any interfaces have been added; set to 0
+dnl  if any interfaces have been changed or removed. removal has
+dnl  precedence over adding, so set to 0 if both happened.
+GDL_AGE=0
+
+AC_SUBST(GDL_CURRENT)
+AC_SUBST(GDL_REVISION)
+AC_SUBST(GDL_AGE)
+
 PACKAGE=gdl
 GDL_VERSION=$GDL_MAJOR_VERSION.$GDL_MINOR_VERSION.$GDL_MICRO_VERSION
 
