--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -47,7 +47,8 @@ CFILE_GLOB=$(top_srcdir)/gdl/*.c
 
 # Header files to ignore when scanning.
 # e.g. IGNORE_HFILES=gtkdebug.h gtkintl.h
-IGNORE_HFILES=gdl-data-* gdl-i18n.h libgdl*
+IGNORE_HFILES=gdl-data-* gdl-i18n.h libgdl* gdl-dock-notebook.h \
+	gdl-dock-paned.h gdl-dock-tablabel.h gdl-dock-item-button-image.h
 
 # Images to copy into HTML directory.
 # e.g. HTML_IMAGES=$(top_srcdir)/gtk/stock-icons/stock_about_24.png
