Removed deprecated libraries and fixed missing header
bgo#580860 – Remove deprecated libgnome dependency
bgo#582511 – Use GtkBuilder instead of libglade
bgo#583963 – does not build with gdl 2.27.2

--- a/configure.in
+++ b/configure.in
@@ -50,11 +50,9 @@ AC_SUBST(SNAPSHOT)
 
 GTK_REQUIRED=2.12.0
 XML_REQUIRED=2.2.8
-LIBGLADE_REQUIRED=2.0.0
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(XML_REQUIRED)
-AC_SUBST(LIBGLADE_REQUIRED)
 
 AM_MAINTAINER_MODE
 
@@ -82,8 +80,7 @@ AC_SUBST(XML_CFLAGS)
 AC_SUBST(XML_LIBS)
 
 PKG_CHECK_MODULES(GDL_DEPENDENCIES, 
-	gtk+-2.0 >= $GTK_REQUIRED 
-	libglade-2.0 >= $LIBGLADE_REQUIRED)
+	gtk+-2.0 >= $GTK_REQUIRED)
 AC_SUBST(GDL_DEPENDENCIES_CFLAGS)
 AC_SUBST(GDL_DEPENDENCIES_LIBS)
 
