--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -83,7 +83,7 @@ ui_DATA = layout.ui
 EXTRA_DIST = libgdlmarshal.list \
 	tree-expand.xpm \
 	tree-contract.xpm \
-	layout.glade \
+	layout.ui \
 	program.xpm static.xpm shared.xpm
 
 # enumerations code generation
