--- a/configure.in
+++ b/configure.in
@@ -55,6 +55,7 @@ AC_SUBST(GTK_REQUIRED)
 AC_SUBST(XML_REQUIRED)
 
 AM_MAINTAINER_MODE
+m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
 AC_ISC_POSIX
 AC_PROG_CC
