--- a/configure.in
+++ b/configure.in
@@ -85,10 +85,10 @@ PKG_CHECK_MODULES(GDL_DEPENDENCIES,
 AC_SUBST(GDL_DEPENDENCIES_CFLAGS)
 AC_SUBST(GDL_DEPENDENCIES_LIBS)
 
-if test x$MAINT = x; then
-	DEPRECATED_FLAGS="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
-	AC_SUBST(DEPRECATED_FLAGS)
-fi
+dnl if test x$MAINT = x; then
+dnl 	DEPRECATED_FLAGS="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED -DBONOBO_UI_DISABLE_DEPRECATED"
+dnl	AC_SUBST(DEPRECATED_FLAGS)
+dnl fi
 
 AC_MSG_CHECKING([for native Win32])
 case "$host" in
