Make separate uidir for 3.0
https://bugzilla.gnome.org/show_bug.cgi?id=638323

--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -81,7 +81,7 @@ libgdlinclude_HEADERS = \
 	$(libgdl_headers) \
 	libgdltypebuiltins.h
 
-uidir = $(datadir)/gdl/ui
+uidir = $(datadir)/gdl-3/ui
 ui_DATA = layout.ui
 
 EXTRA_DIST = libgdlmarshal.list \
