Do not dist gir_DATA
See bug 621611 for rationale.

https://bugzilla.gnome.org/show_bug.cgi?id=638324

--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -155,10 +155,10 @@ Gdl_3_gir_SCANNERFLAGS = --c-include gdl/gdl.h
 INTROSPECTION_GIRS += Gdl-3.gir
 
 girdir = $(datadir)/gir-1.0
-dist_gir_DATA = $(INTROSPECTION_GIRS)
+gir_DATA = $(INTROSPECTION_GIRS)
 
 typelibdir = $(libdir)/girepository-1.0
 typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)
 
-CLEANFILES += $(dist_gir_DATA) $(typelib_DATA)
+CLEANFILES += $(gir_DATA) $(typelib_DATA)
 endif
