--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -11,6 +11,9 @@ AUTOMAKE_OPTIONS = 1.6
 # The name of the module, e.g. 'glib'.
 DOC_MODULE=gdl
 
+# The version of the module, e.g. '2'.
+DOC_MODULE_VERSION=3.0
+
 # The top-level SGML file. You can change this if you want to.
 DOC_MAIN_SGML_FILE=$(DOC_MODULE)-docs.sgml
 
