configure.ac: Use maintainer mode by default
See
https://mail.gnome.org/archives/desktop-devel-list/2011-September/msg00064.html

--- a/configure.in
+++ b/configure.in
@@ -55,7 +55,7 @@ XML_REQUIRED=2.2.8
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(XML_REQUIRED)
 
-AM_MAINTAINER_MODE
+AM_MAINTAINER_MODE([enable])
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
 AC_ISC_POSIX
