--- a/configure.in
+++ b/configure.in
@@ -143,6 +143,12 @@ AC_SUBST(gdl_images_dir)
 # check for gtk-doc
 GTK_DOC_CHECK(1.4)
 
+GLIB_PREFIX="`$PKG_CONFIG --variable=prefix glib-2.0`"
+GTK_PREFIX="`$PKG_CONFIG --variable=prefix gtk+-3.0`"
+
+AC_SUBST(GLIB_PREFIX)
+AC_SUBST(GTK_PREFIX)
+
 GOBJECT_INTROSPECTION_CHECK([0.6.7])
 
 AC_OUTPUT([
