--- a/gdl-3.0.pc.in
+++ b/gdl-3.0.pc.in
@@ -7,6 +7,7 @@ datarootdir=@datarootdir@
 Name: gdl
 Description: Gnome Docking Library
 Version: @VERSION@
-Requires: gtk+-3.0 libxml-2.0
+Requires: gtk+-3.0
+Requires.private: libxml-2.0
 Libs: -L${libdir} -lgdl-3
 Cflags: -I${includedir}
